Mejoras en EventListener, correcion de nombre paquete, eliminar import, crear variable para bad request